introduce modular scraping architecture with separate scrapers for marketplaces, update dependencies and Java version to 21, and optimize Dockerfile